| Summary: | ASTERISK-25004: Crash in authenticated reinvite after originated T.38 FAX | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-04-23 12:55:28 | Date Closed: | 2015-04-24 09:25:16 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | After originating a channel to the SendFAX application, Asterisk will hang up the channel. The PJSIP code will attempt to reinvite the call back to audio. If the reinvite results in an authentication challenge, then the authed reinvite that Asterisk sends will cause a crash since res_pjsip_t38 will attempt to access the channel that has been hung up. | ||
| Comments: | |||